Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73583

tst_QSoundEffect in QtMultimedia fails on Android

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 5.12.5
    • 5.12
    • Multimedia
    • None
    • Android X86, clang
    • Android

      agent:2019/02/05 00:03:27 build.go:192: FAIL! : tst_QSoundEffect::initTestCase() '!fullPath.isEmpty()' returned FALSE. (Unable to locate test_tone.wav)
      agent:2019/02/05 00:03:27 build.go:192: Loc: [tst_qsoundeffect.cpp(103)]

        For Gerrit Dashboard: QTBUG-73583
        # Subject Branch Project Status CR V

            valentyn.doroshchuk Valentyn Doroshchuk
            daniel.smith Daniel Smith
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes