Android/AudioTrack: Fix crash when it is unable to get min buffer size

android/media/AudioTrack::getMinBufferSize might return an error instead
of a size.

Task-number: QTBUG-73583
Change-Id: I52e2d214ab7065bcea9d983979bb0b83717428af
Reviewed-by: Christian Strømme <christian.stromme@qt.io>